# neos-media-proxy

./: Cargo.toml  config.toml.example
crates/jellyfin-openapi-client/: Cargo.toml  README.md  jellyfin-openapi-stable.json
crates/jellyfin-openapi-client/.openapi-generator/: FILES
crates/jellyfin-openapi-client/docs/: AccessSchedule.md  ActivityLogApi.md  ActivityLogEntry.md  ActivityLogEntryQueryResult.md  AddListingProviderRequest.md  AddMediaPathRequest.md  AddTunerHostRequest.md  AddVirtualFolderDto.md  AddVirtualFolderDtoLibraryOptions.md  AddVirtualFolderRequest.md  AdminNotificationDto.md  AlbumInfo.md  AlbumInfoRemoteSearchQuery.md  AlbumInfoRemoteSearchQuerySearchInfo.md  AllThemeMediaResult.md  AllThemeMediaResultThemeVideosResult.md  ApiKeyApi.md  ApplySearchCriteriaRequest.md  Architecture.md  ArtistInfo.md  ArtistInfoRemoteSearchQuery.md  ArtistInfoRemoteSearchQuerySearchInfo.md  ArtistsApi.md  AudioApi.md  AuthenticateUserByName.md  AuthenticateUserByNameRequest.md  AuthenticateWithQuickConnectRequest.md  AuthenticationInfo.md  AuthenticationInfoQueryResult.md  AuthenticationResult.md  AuthenticationResultSessionInfo.md  AuthenticationResultUser.md  BaseItem.md  BaseItemDto.md  BaseItemDtoCurrentProgram.md  BaseItemDtoImageBlurHashes.md  BaseItemDtoQueryResult.md  BaseItemDtoUserData.md  BaseItemKind.md  BaseItemPerson.md  (+400 more)
crates/jellyfin-openapi-client/src/apis/: activity_log_api.rs  api_key_api.rs  artists_api.rs  audio_api.rs  dlna_api.rs  (+58 more)
crates/media-provider/: Cargo.toml
crates/media-provider/src/: jellyfin.rs  lib.rs
src/: config.rs  main.rs
(+387 files in other folders)
