[workspace]
members = ["crates/*"]

[package]
name = "neos-media-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.5.15", features = ["ws", "headers"]}
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
