[package]
name = "media-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
inventory = "0.3.1"
thiserror = "1.0.32"
tracing = "0.1.36"
jellyfin-openapi-client = { path = "../jellyfin-openapi-client" }
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
